rxf-db branch with gwt-formatter